Fixed visual discrepancy on mobile view with nav list

--- a/src/SharedComponents/Page/app.css
+++ b/src/SharedComponents/Page/app.css
@@ -190,6 +190,7 @@ input[type=number] {
     }
 
     .nav-list {
+        width: 100%;
         justify-content: center;
     }
     .nav-item {
